Fix text from wrapping after a few words by expanding div width to 100%

--- a/style.scss
+++ b/style.scss
@@ -49,5 +49,5 @@ body {
 
 .photo--container {
   display: inline-block;
+  width: 100%;
 }
-
